--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
       "I'm a mineguaft cheater :)",
       "I'm retarded",
       "I dont have friends (except exeos)",
+      "Keiner kann mich stoppen, nicht einmal ein Stoppschild",
    ],
    typeSpeed: 69,
    backSpeed: 32,
