small change to type string

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       "I'm a mineguaft cheater :)",
       "I'm retarded",
       "I dont have friends (except exeos)",
-      "Keiner kann mich stoppen, nicht einmal ein Stoppschild",
+      "Keiner kann mich stoppen,<br> nicht einmal ein Stoppschild",
    ],
    typeSpeed: 69,
    backSpeed: 32,
