added copyright and new voices

--- a/index.html
+++ b/index.html
@@ -154,12 +154,9 @@
                      }
                      
                      nig1();
-
-                     
                   </script>
 
             <div class="centered">
-
                <div style="transform: translateY(10px); user-select: none;">
                <span class="grow" style="font-size: 6.9rem; font-family: system-ui; text-transform: uppercase;" onclick="playRandomSound();">Outuby</span>
                <p id='player' style="font-size: 1px;"></p>
@@ -199,6 +196,7 @@
             </div>
          </header>
       </div>
+      <p style="position: fixed; bottom: 0; width:100%; text-align: center; user-select: none; opacity: .3;" class="allahgh3">Copyright © 2022 outuby.space</p>
    </div>
 </div>
 </div>
