--- a/projects/index.html
+++ b/projects/index.html
@@ -73,6 +73,7 @@
                   </figure>
             </header>
          </div>
+         <p style="position: fixed; bottom: 0; width:100%; text-align: center; user-select: none; opacity: .3;" class="allahgh3">Copyright © 2022 outuby.space</p>
       </div>
    </div>
 
@@ -87,6 +88,13 @@
 </body>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<script>     ScrollReveal().reveal('.allahgh3', {
+   duration: 1000,
+   origin: 'bottom',
+   distance: '420rem',
+   delay: 3100
+ });</script>
 
    <script language="JavaScript">
      //////////F12 disable code////////////////////////
