--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+   <meta content="outuby.space 👑" property="og:title" />
+   <meta content="Site Description" property="og:description" />
+   <meta content="https://outuby.space" property="og:url" />
+   <meta content="assets/outubyismygod.png" property="og:image" />
+   <meta content="#BD00FF" data-react-helmet="true" name="theme-color" />
+
    <link rel="stylesheet" href="assets/css/main.css" />
    <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
    <link rel='stylesheet' href='assets/css/vendor.css'>
