--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
    <meta content="outuby.space 👑" property="og:title" />
-   <meta content="Site Description" property="og:description" />
+   <meta content="if ur reading this sub to my yt" property="og:description" />
    <meta content="https://outuby.space" property="og:url" />
    <meta content="assets/outubyismygod.png" property="og:image" />
    <meta content="#BD00FF" data-react-helmet="true" name="theme-color" />
