--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <meta content="outuby.space 👑" property="og:title" />
    <meta content="if ur reading this sub to my yt" property="og:description" />
    <meta content="https://outuby.space" property="og:url" />
-   <meta content="assets/outubyismygod.png" property="og:image" />
+   <meta content="/assets/outubyismygod.png" property="og:image" />
    <meta content="#BD00FF" data-react-helmet="true" name="theme-color" />
 
    <link rel="stylesheet" href="assets/css/main.css" />
