--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-   <meta content="outuby.space 👑" property="og:title" />
+   <!-- <meta content="outuby.space 👑" property="og:title" />
    <meta content="if ur reading this sub to my yt" property="og:description" />
    <meta content="https://outuby.space" property="og:url" />
    <meta content="/assets/outubyismygod.png" property="og:image" />
-   <meta content="#BD00FF" data-react-helmet="true" name="theme-color" />
+   <meta content="#BD00FF" data-react-helmet="true" name="theme-color" /> -->
 
    <link rel="stylesheet" href="assets/css/main.css" />
    <link rel='stylesheet' href='assets/css/bootstrap.min.css'>
