--- a/projects/index.html
+++ b/projects/index.html
@@ -61,9 +61,9 @@
                   </figure>
 
                   <figure id="second" class="snip1205" style="border-radius: 15px;">
-                     <img style="border-radius: 15px; margin-right: 50px;" src="assets/websites/coming_soon.png" alt="" width="640" height="360">
-                     <i class="fa fa-eye" aria-hidden="true"> <br> <h2 style="color: rgb(172, 0, 0);" class="dertext">[OFFLINE]</h2></i>
-                     <!-- <a href="../projects/offline/ASP/"></a> -->
+                     <img style="border-radius: 15px; margin-right: 50px;" src="assets/websites/Koks.png" alt="" width="640" height="360">
+                     <i class="fa fa-eye" aria-hidden="true"> <br> <h2 style="color: rgb(0, 255, 42);" class="dertext">[ONLINE]</h2></i>
+                     <a href="https://schummel.software"></a>
                   </figure>
 
                   <figure class="snip1205" style="margin: auto; border-radius: 15px;">
