--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                   <ul>
 
                   <div>
-                     <li><a href="https://www.youtube.com/channel/UCeH0IeP3MF5kdGiPGV8zwCg" class="fa fa-youtube" target="_blank"></a></li>
+                     <li><a href="https://www.youtube.com/channel/UCeH0IeP3MF5kdGiPGV8zwCg" class="fa fa-youtube left" target="_blank"></a></li>
                      <li><a href="#" class="icon fa-comments" target="_blank" onclick="popup13()"></a></li>
-                     <li><a href="projects/" class="fa fa-laptop-code"></a></li>
+                     <li><a href="projects/" class="fa fa-laptop-code left"></a></li>
                   </div>
 
                   <div>
