--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
    <header>
    <div class="loading">
       <div id="wrapper">
-         <div id="main">
+         <div id="main" style="z-index: 10000;">
             <header id="header">
 
-               <video id="videobcg" preload="auto" loop="true" volume=".02" style="opacity: .2;">
+               <video id="videobcg" preload="auto" loop="true" volume=".02" style="opacity: .3;">
                   <source src="assets/video/Whip It Up.mp4" type="video/mp4">
                      Bruh your browser does not support HTML5 video, loser.
                  </video>
@@ -177,18 +177,18 @@
                   <ul>
 
                   <div>
-                     <li><a href="https://www.youtube.com/channel/UCeH0IeP3MF5kdGiPGV8zwCg" class="fa fa-youtube left" target="_blank"></a></li>
-                     <li><a href="#" class="icon fa-comments" target="_blank" onclick="popup13()"></a></li>
-                     <li><a href="projects/" class="fa fa-laptop-code left"></a></li>
+                     <li><a href="https://www.youtube.com/channel/UCeH0IeP3MF5kdGiPGV8zwCg" class="fa fa-youtube left" target="_blank"></a>Youtube</li>
+                     <li><a href="#" class="icon fa-comments" target="_blank" onclick="popup13()"></a>Contact</li>
+                     <li><a href="projects/" class="fa fa-laptop-code left"></a>Projects</li>
                   </div>
 
-                  <div>
+                  <!-- <div>
                   <span class="allahgh1">Youtubeㅤ</span>
                   <span style="opacity: 0;">.</span>
                   <span class="allahgh2">Contact</span>
                   <span style="opacity: 0;">.</span>
                   <span class="allahgh3">ㅤProjects</span>
-                  </div>
+                  </div> -->
 
                   </ul>
                </nav>
