bg response dings

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
    <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
    <script src='assets/js/vendor/html5shiv.min.js'></script>
    <script src='assets/js/title.js'></script>
+   <link rel="stylesheet" href="assets/css/not.css">
    <!-- <script src="assets/js/nogero.js"></script> -->
    <script src="https://unpkg.com/scrollreveal@4"></script>
    <!-- <script src="assets/js/jungediescrollscheißenervtmichextrem.js"></script> -->
-   <script src="assets/js/thingy.js"></script>
+   <!-- <script src="assets/js/thingy.js"></script> -->
    <link rel="icon" type="image/ico" href="assets/outubyismygod.png"/>
 </head>
 
@@ -51,7 +52,7 @@
    }
 </style>
 
-<body style="background: linear-gradient(0deg, rgb(32, 0, 105) 0%, rgba(0, 0, 0) 100%);">
+<body style="background: linear-gradient(0deg, rgb(32, 0, 105) 0%, rgba(0, 0, 0) 100%); text-shadow: rgb(0 0 0) 2px 2px 8px;">
    <div class="site-loader" style="user-select: none;">
       <span></span>
       <p>loading...</p>
@@ -65,7 +66,7 @@
    <header>
    <div class="loading">
       <div id="wrapper">
-         <div id="main" style="z-index: 10000;">
+         <div id="main">
             <header id="header">
 
                <video id="videobcg" preload="auto" loop="true" volume=".02" style="opacity: .3;">
@@ -171,8 +172,7 @@
                <div style="user-select: none;">
                <h2 style="transform: translateY(-15px);"><font size="2">space</font></h2>
                <br>
-               <h3 style="font-weight: 300; transform: translateY(-15px);"> <span class="type"></span> </h3>
-
+               <h3 style="font-weight: 300; transform: translateY(-15px);"> <span class="type"></span></h3>
                <nav>
                   <ul>
 
@@ -181,7 +181,7 @@
                      <li><a href="#" class="icon fa-comments" target="_blank" onclick="popup13()"></a>Contact</li>
                      <li><a href="projects/" class="fa fa-laptop-code left"></a>Projects</li>
                   </div>
-
+                  
                   <!-- <div>
                   <span class="allahgh1">Youtubeㅤ</span>
                   <span style="opacity: 0;">.</span>
