--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <!-- <script src="assets/js/nogero.js"></script> -->
    <script src="https://unpkg.com/scrollreveal@4"></script>
    <!-- <script src="assets/js/jungediescrollscheißenervtmichextrem.js"></script> -->
-   <!-- <script src="assets/js/thingy.js"></script> -->
+   <script src="assets/js/thingy.js"></script>
    <link rel="icon" type="image/ico" href="assets/outubyismygod.png"/>
 </head>
 
