--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
    <!-- <script src="assets/js/jungediescrollscheißenervtmichextrem.js"></script> -->
    <script src="assets/js/thingy.js"></script>
    <link rel="icon" type="image/ico" href="assets/outubyismygod.png"/>
+
+   <style>
+      #video-detach-button {
+         display: none !important;
+      }
+   </style>
+   
 </head>
 
 <!-- <script>
