position zeug geficxkt

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
             <div class="centered">
                <div style="transform: translateY(10px); user-select: none;">
-               <span class="grow" style="font-size: 6.9rem; font-family: system-ui; text-transform: uppercase;" onclick="playRandomSound();">Outuby</span>
+               <span style="font-size: 6.9rem; font-family: system-ui; text-transform: uppercase;" onclick="playRandomSound();">Outuby</span>
                <p id='player' style="font-size: 1px;"></p>
                </div>
                <div style="user-select: none;">
