--- a/projects/index.html
+++ b/projects/index.html
@@ -51,7 +51,7 @@
          <div id="main">
             <header id="header">
                <h2 style="transform: translateY(25px)"><font size="2">about my</font></h2>
-               <h2 style="font-size: 6.9rem; transform: translateY(25px); padding-bottom: 20px;">Projects</h1>
+               <h2 class="pjct" style="transform: translateY(25px); padding-bottom: 20px;">Projects</h1>
                <br>
                
                   <figure id="first" class="snip1205" style="border-radius: 15px;">
@@ -72,6 +72,13 @@
                      <!-- <a href="../projects/Fanta/"></a> -->
                   </figure>
             </header>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h1>nig</h1>
          </div>
          <p style="position: fixed; bottom: 0; width:100%; text-align: center; user-select: none; opacity: .3;" class="allahgh3">Copyright © 2022 outuby.space</p>
       </div>
