pointer on hover

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                      if(video.muted){
                      	video.muted = false;
                         // video.play = true;
-                        video.volume = .1;
+                        video.volume = .3;
                         console.log("unmuted");
                      } else {
                      	video.muted = true;
                         // video.play = true;
-                        video.volume = .1;
+                        video.volume = .3;
                         console.log("muted");
                      }
                   }
@@ -173,7 +173,7 @@
 
             <div class="centered">
                <div style="transform: translateY(10px); user-select: none;">
-               <span style="font-size: 6.9rem; font-family: system-ui; text-transform: uppercase;" onclick="playRandomSound();">Outuby</span>
+               <span class="outubyx" style="font-size: 6.9rem; font-family: system-ui; text-transform: uppercase;" onclick="playRandomSound();">Outuby</span>
                <p id='player' style="font-size: 1px;"></p>
                </div>
                <div style="user-select: none;">
@@ -188,14 +188,6 @@
                      <li><a href="#" class="icon fa-comments" target="_blank" onclick="popup13()"></a>Contact</li>
                      <li><a href="projects/" class="fa fa-laptop-code left"></a>Projects</li>
                   </div>
-                  
-                  <!-- <div>
-                  <span class="allahgh1">Youtubeㅤ</span>
-                  <span style="opacity: 0;">.</span>
-                  <span class="allahgh2">Contact</span>
-                  <span style="opacity: 0;">.</span>
-                  <span class="allahgh3">ㅤProjects</span>
-                  </div> -->
 
                   </ul>
                </nav>
