bg music leiser

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
    <!-- <script src="assets/js/nogero.js"></script> -->
    <script src="https://unpkg.com/scrollreveal@4"></script>
    <!-- <script src="assets/js/jungediescrollscheißenervtmichextrem.js"></script> -->
-   <script src="assets/js/thingy.js"></script>
+   <!-- <script src="assets/js/thingy.js"></script> -->
    <link rel="icon" type="image/ico" href="assets/outubyismygod.png"/>
 
    <style>
@@ -89,12 +89,12 @@
                      if(video.muted){
                      	video.muted = false;
                         // video.play = true;
-                        video.volume = .3;
+                        video.volume = .2;
                         console.log("unmuted");
                      } else {
                      	video.muted = true;
                         // video.play = true;
-                        video.volume = .3;
+                        video.volume = .25;
                         console.log("muted");
                      }
                   }
@@ -191,7 +191,6 @@
 
                   </ul>
                </nav>
-
                <h3 style="padding-bottom: 5px; margin-top: 25px;">Volume</h3>
             <div class="">
                <a class="purple-head hover-black skiush" onclick="changeIcon(this), toggleMute();" id="myBtn" style="color: #fff; cursor: pointer; font-size: xx-large;">
