removed detach button again ig

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       #video-detach-button {
          display: none !important;
       }
+      #detach-button-host {
+         display: none !important;
+      }
    </style>
    
 </head>
