--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
       "I'm a programmer",
       "I'm a Designer",
       "I'm a liar",
-      "I'm a mineguaft cheater :)",
       "I'm retarded",
+      "hmu if you need a website",
       "I dont have friends (except exeos)",
       "Keiner kann mich stoppen,<br> nicht einmal ein Stoppschild",
    ],
