--- a/index.html
+++ b/index.html
@@ -246,12 +246,11 @@
    var typed = new Typed('.type', {
   strings: [
       "I'm a german web developer",
-      "I'm a programmer",
-      "I'm a Designer",
+      "I'm a designer",
       "I'm a liar",
       "I'm retarded",
-      "<a onclick='popup13()' style='color: #b19cff; cursor: pointer; font-weight: bolder;'>hmu</a> if you need a website<a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>",
-      "I dont have friends (except exeos)",
+      "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website<a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>",
+      "I dont have friends (except exeos and felix)",
       "Keiner kann mich stoppen,<br> nicht einmal ein Stoppschild",
    ],
    typeSpeed: 69,
@@ -296,7 +295,7 @@
    document.oncontextmenu=new Function("return false")
    function disableCtrlKeyCombination(e)
    {
-   var forbiddenKeys = new Array('a', 'n', 'c', 'x', 'v', 'j' , 'w');
+   var forbiddenKeys = new Array('a', 'n', 'c', 'x', 'v', 'j' , 'w' , 'i');
    var key;
    var isCtrl;
    if(window.event)
