--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
       "I'm a designer",
       "I'm a liar",
       "I'm retarded",
-      "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website<a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>",
+      "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
+      "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
+      "<a onclick='popup13()' class='contactding' style='font-weight: bolder;'>hmu</a> if you need a website",
       "I dont have friends (except exeos and felix)",
       "Keiner kann mich stoppen,<br> nicht einmal ein Stoppschild",
    ],
