--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <meta name="description" content="If you read this you have to subscribe to my yt :)">
 
    <meta content="outuby.space 👑" property="og:title" />
    <meta content="if ur reading this sub to my yt" property="og:description" />
