--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <!-- <script src="assets/js/nogero.js"></script> -->
    <script src="https://unpkg.com/scrollreveal@4"></script>
    <!-- <script src="assets/js/jungediescrollscheißenervtmichextrem.js"></script> -->
-   <script src="assets/js/thingy.js"></script>
+   <!-- <script src="assets/js/thingy.js"></script> -->
    <link rel="icon" type="image/ico" href="assets/outubyismygod.png"/>
 
    <style>
@@ -177,7 +177,7 @@
 
             <div class="centered">
                <div style="transform: translateY(10px); user-select: none;">
-               <span class="outubyx" style="font-size: 6.9rem; font-family: system-ui; text-transform: uppercase;" onclick="playRandomSound();">Outuby</span>
+               <span class="outubybig" onclick="playRandomSound();">Outuby</span>
                <p id='player' style="font-size: 1px;"></p>
                </div>
                <div style="user-select: none;">
@@ -197,7 +197,7 @@
                </nav>
                <h3 style="padding-bottom: 5px; margin-top: 25px;">Volume</h3>
             <div class="">
-               <a class="purple-head hover-black skiush" onclick="changeIcon(this), toggleMute();" id="myBtn" style="color: #fff; cursor: pointer; font-size: xx-large;">
+               <a class="purple-head hover-black skiush" onclick="changeIcon(this), toggleMute();" id="myBtn">
                  <i id="faVolume" class="fa-solid fa-volume-high"></i>
                  <span> </span>
                </a>
