--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@
    }
 </style>
 
-<body style="background: linear-gradient(0deg, rgb(32, 0, 105) 0%, rgba(0, 0, 0) 100%);">
+<body style="background: linear-gradient(0deg, rgb(32, 0, 105) 0%, rgba(0, 0, 0) 100%);" oncontextmenu="return false;" onkeydown="return false;" onmousedown="return false;">
    <div class="site-loader">
       <span></span>
       <p>loading...</p>
