--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
    }
 </style>
 
-<body style="background: linear-gradient(0deg, rgb(32, 0, 105) 0%, rgba(0, 0, 0) 100%); text-shadow: rgb(0 0 0) 2px 2px 8px;" oncontextmenu="return false;" onkeydown="return false;" onmousedown="return false;">
+<body style="background: linear-gradient(0deg, rgb(32, 0, 105) 0%, rgba(0, 0, 0) 100%); text-shadow: rgb(0 0 0) 2px 2px 8px;" oncontextmenu="return false;" onkeydown="return false;">
    <div class="site-loader" style="user-select: none;">
       <span></span>
       <p>loading...</p>
