--- a/index.html
+++ b/index.html
@@ -332,5 +332,33 @@
    }
    </script>
 
+<script>
+   window.addEventListener('keydown', function (e) {
+       if (e.key === 'F5') {
+           location.reload();
+       }
+       else if (e.key === 'F11') {
+           toggleFullscreen();
+       }
+   },
+   
+   false);
+
+   function getFullscreenElement() {
+     return document.fullscreenElement   //standard property
+     || document.webkitFullscreenElement //safari/opera support
+     || document.mozFullscreenElement    //firefox support
+     || document.msFullscreenElement;    //ie/edge support
+  }
+
+  function toggleFullscreen() {
+     if(getFullscreenElement()) {
+        document.exitFullscreen();
+     }else {
+   document.documentElement.requestFullscreen().catch(console.log);
+     }
+  }
+</script>
+
 </head>
 </html>
