--- a/404.html
+++ b/404.html
@@ -1,1 +1,80 @@
-nig nog
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Error</title>
+    <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+          name="viewport">
+
+    <meta content="outuby.space 👑" property="og:title"/>
+    <meta content="if ur reading this sub to my yt" property="og:description"/>
+    <meta content="https://outuby.space" property="og:url"/>
+    <meta content="/img/outubyismygod.png" property="og:image"/>
+    <meta content="#BD00FF" data-react-helmet="true" name="theme-color"/>
+
+    <meta content="If you read this you have to subscribe to my yt :)" name="description">
+
+    <link href="img/outubyismygod.png" rel="icon" type="image/ico"/>
+
+    <!-- CSS -->
+    <link href="css/particles.css" media="screen" rel="stylesheet">
+    <link href="css/main.css" media="screen" rel="stylesheet">
+    <link href="css/creativa-popup.css" rel="stylesheet">
+
+    <!-- JS -->
+    <script src="js/title2.js"></script>
+
+</head>
+<body>
+
+<!-- particles.js container -->
+<div id="particles-js"></div>
+<div class="center">
+    <!--        <div class="blur"></div>-->
+    <div class="content">
+        <div class="typed" style="transform: translateY(-50px)">
+            <h1><span class="type"></span></h1>
+        </div>
+
+        <div class="wrap notfoiund">
+            <div>
+                <a href="https://outuby.space/">
+                    <p class='button'>
+                        <i class="fa-solid fa-angles-left"></i>
+                        Go back
+                    </p>
+                </a>
+            </div>
+        </div>
+
+
+    </div>
+</div>
+
+<script src="js/typed.js"></script>
+<script src="js/allah.js"></script>
+
+<script>
+    var typed = new Typed('.type', {
+        strings: [
+            "Error 404",
+
+        ],
+        typeSpeed: 250,
+        backSpeed: 32,
+        backDelay: 3500,
+        loop: false,
+        smartBackspace: false,
+    });
+</script>
+
+
+<!-- scripts -->
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/9105e9014d.js"></script>
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
+<script src="js/main.js"></script>
+
+
+</body>
+</html>
